Prod:published production version

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TAKTO - Task Manager</title>
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="app/css/styles.css" />
-    <link rel="stylesheet" href="app/css/terminal.css" />
     <meta
       name="description"
       content="Une application minimaliste de gestion de tâches pour développeurs web"
@@ -175,7 +175,7 @@
     </main>
 
     <script src="app/js/app.js" defer></script>
-    <script src="app/js/terminal.js" defer></script>
+    <script src="app/js/terminal.min.js" defer></script>
     <script>
       // Fonctions pour afficher les différentes sections
       function cleanupTerminal() {
